[package]
name = "webgestaltpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "webgestaltpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.2"
webgestalt_lib = {git = "https://github.com/bzhanglab/webgestalt_rust.git"}
