[package]
name = "webgestaltpy"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "webgestaltpy"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.12"
pyo3 = "0.20.2"
rustc-hash = "1.1.0"
webgestalt_lib = "0.3.2"
