[project]
name = "WebGestaltPy"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool]
rye = { dev-dependencies = [
    "pandas>=1.1.5",
    "mkdocs-material>=9.2.8",
    "maturin>=1.4.0",
    "mike>=2.0.0",
    "pre-commit>=3.5.0",
] }

[tool.maturin]
features = ["pyo3/extension-module"]
