[project]
name = "WebGestaltPy"
version="0.3.2"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.8.3",
    "mike>=2.1.3",
    "mkdocs-material>=9.2.7",
    "pre-commit>=2.21.0",
]
